# agentlytics

./: .gitignore  API.md  CONTRIBUTING.md  README.md  cache.js  index.js  mod.ts  package-lock.json  package.json  pricing.json  relay-client.js  relay-server.js  sanity-check.js  server.js  share-image.js  sidecar.js
.github/workflows/: release.yml
docs/: index.html
docs/superpowers/specs/: 2026-05-20-antigravity-cli-support-design.md
editors/: antigravity-cli.js  antigravity.js  base.js  claude.js  cline-cli.js  codebuff.js  codex.js  copilot-jetbrains.js  copilot.js  index.js  kilocode-cli.js  kimi.js  opencode.js  pi.js  windsurf.js  zed.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: node-backend-aarch64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/editors/: kimi.test.js
test/fixtures/kimi/base/: kimi.json
test/fixtures/kimi/base/sessions/cc34b7d06eb1f7001ade540e399bae11/session-main/: context.jsonl  context_sub_1.jsonl  wire.jsonl
test/fixtures/kimi/mismatch/: kimi.json
test/fixtures/kimi/no-config/: kimi.json
test/fixtures/kimi/no-mapping/: config.toml  kimi.json
ui/: package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  main.jsx
ui/src/components/: EditorIcon.jsx
ui/src/lib/: api.js  constants.js
ui/src/pages/: Artifacts.jsx  Dashboard.jsx  DeepAnalysis.jsx  ProjectDetail.jsx  Projects.jsx  RelayDashboard.jsx  RelayUserDetail.jsx  Settings.jsx  Subscriptions.jsx
(+6 files in other folders)
