[package]
name = "agentlytics"
version = "0.2.0"
description = "Unified analytics for your AI coding agents"
authors = ["fkadev"]
edition = "2021"
license = "MIT"

[lib]
name = "agentlytics_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
